Bug 50657 - Retail: Scroll bar for categories list overlaps products

--- a/skins/retail/css/categories.css
+++ b/skins/retail/css/categories.css
@@ -1,5 +1,4 @@
 .categories-tree {
-    width: 189px;
     border-width: 0 1px 1px 0;
     border-style: solid;
 }
