--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -374,9 +374,10 @@ input[type="radio"]:checked + .radio::before,
     left: 0;
     top: 0;
     bottom: 0;
+    width: 189px;
     overflow-x: hidden;
     overflow-y: auto;
-    padding-right: 10px;
+    margin-right: 10px;
     z-index: 1;
 }
 
